# SuperClipboard3

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  VERSIONS.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  classifier.rs  clipboard.rs  lib.rs  main.rs  storage.rs  window_position.rs
src/api/: clipboard.ts  memos.ts  settings.ts
src/components/: CategoryTabs.tsx  ClipboardItem.tsx  ClipboardList.tsx  MemoBody.tsx  MemoList.tsx  MemoRichEditor.tsx  SettingsButton.tsx
src/i18n/: index.tsx  translations.ts
src/types/: index.ts
