[package]
name = "superclipboard3"
version = "1.0.0"
description = "A lightweight clipboard manager with smart categorization"
authors = [""]
edition = "2021"

[lib]
name = "superclipboard3_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
arboard = { version = "3", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png"] }
regex = "1"
url = "2"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

# Optimize for small binary size in release
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
